minor changes lab 4

--- a/wishlist/templates/wishlist.html
+++ b/wishlist/templates/wishlist.html
@@ -15,7 +15,7 @@
         <button><a href = "{% url 'wishlist:logout' %}">Logout</a></button>
     </nav>
     <h1 style="font-family:'Pinyon Script'"><strong><center>✫ Wishlist ✫</center></strong></h1>
-    <h2 style="font-family:'Poppins'"><center>Username: {{nama}}</center></h2><br>
+    <h2 style="font-family:'Poppins'"><center>Nama: {{nama}}</center></h2><br>
   </body>
 
   <style>
@@ -45,10 +45,6 @@
         text-align: center;
     }
   </style>
-
-<body>
-    <h5>Nama: </h5>
-    <p>{{nama}}</p>
 
 <table>
     <tr>
