--- a/wishlist/templates/wishlist.html
+++ b/wishlist/templates/wishlist.html
@@ -7,16 +7,38 @@
 
 {% block content %}
 
+<!doctype html>
+<html lang="en">
+  <head>
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <title>Bootstrap demo</title>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-iYQeCzEYFbKjA/T2uDLTpkwGzCiq6soy8tYaI1GyVh/UjpbCx/TYkiZhlZB6+fzT" crossorigin="anonymous">
+  </head>
+  <body>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.1/dist/js/bootstrap.bundle.min.js" integrity="sha384-u1OknCvxWvY5kfmNBILK2hRnQC3Pr17a+RTT6rIHI7NnikvbZlHgTPOOmMi466C8" crossorigin="anonymous"></script>
+  </body>
+</html>
+
 <link href='https://fonts.googleapis.com/css?family=Pinyon Script' rel='stylesheet'>
 <link href='https://fonts.googleapis.com/css?family=Poppins' rel='stylesheet'>
-  <body>
-    <nav class="navbar navbar-light" style="background-color: #272727;">
-        <b class="navbar-brand" style = "color:#FFFDED; margin-left: 40px; margin-right: 900px">Thobyas Muda Parlindungan</b>
-        <button><a href = "{% url 'wishlist:logout' %}">Logout</a></button>
-    </nav>
-    <h1 style="font-family:'Pinyon Script'"><strong><center>✫ Wishlist ✫</center></strong></h1>
-    <h2 style="font-family:'Poppins'"><center>Nama: {{nama}}</center></h2><br>
-  </body>
+
+<nav class="navbar navbar-expand-lg navbar-light bg-light shadow p-3 mb-5 bg-body rounded">
+    <a class="navbar-brand" href="#">Thoby's Wishlist App</a>
+    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
+      <span class="navbar-toggler-icon"></span>
+    </button>
+    <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
+      <div class="navbar-nav">
+        <a class="nav-item nav-link active" href="#">Wishlist</a>
+        <a class="nav-item nav-link" href="{% url 'wishlist:logout' %}">Logout</a>
+      </div>
+    </div>
+  </nav>
+
+<h1 style="font-family:'Pinyon Script'"><strong><center>𓆇 Wishlist 𓆇</center></strong></h1>
+<h2 style="font-family:'Poppins'"><center>Nama: {{nama}}</center></h2><br>
+
 
   <style>
     table, th, td {
